about page completed and unlocked

--- a/about.css
+++ b/about.css
@@ -279,14 +279,14 @@
     width: 336px;
     height: 430px;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
 
 }
 
 .sp-express-franchise-box img{
-    width: 295px;
+    width: 310px;
     height: 270px;
     padding-bottom: 15px;
 }
@@ -309,4 +309,194 @@
     color: #ffffff;
     font-size: 13px;
     /* padding-top: 30px; */
+}
+
+
+/* ---------- box 6 starts --------------- */
+
+#sp-vf{
+    background-color: #000000;
+    height: 550px;
+    color: #ffffff;
+}
+
+#sp-vf span{
+    font-family: 'Caveat', cursive;
+    font-size: 35px;
+    
+}
+
+#sp-vf h4{
+    font-size: 30px;
+    text-align: center;
+    font-weight: 500;
+}
+
+.vf-img img{
+    width: 550px;
+    height: 310px;
+}
+
+
+.sp-vf-content{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 80px 80px;
+}
+
+.vf-address{
+    width: 540px;
+    margin-left: 20px;
+}
+
+.vf-address p{
+    font-size: 12px;
+    padding-bottom: 10px;
+}
+
+.vf-address h3{
+    font-size: 26px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+
+.fa-location-dot{
+    font-size: 11px;
+}
+
+.fa-phone{
+    font-size: 11px;
+}
+
+.vf-address a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+
+/* ---------- footer starts ------------ */
+
+
+footer{
+    height: 430px; /* have to change */
+    /* width: 1250px; */
+    background-color: #0F0F0F;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    padding-top: 80px;
+    margin-top: 330%;
+}
+
+
+footer a{
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+
+footer a li{
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 14px;
+}
+
+.foot-para{
+    width: 350px;
+    height: 290px;
+    text-align: left;
+}
+
+.foot-para img{
+    width: 140px;
+    height: 65px;
+}
+
+.foot-para p{
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    line-height: 22px;
+}
+
+.foot-menu{
+    width: 200px;
+    /* height: 280px; */
+
+}
+
+.foot-menu p{
+    padding-bottom: 20px;
+}
+
+
+
+.foot-menu li{
+    list-style: none;
+    line-height: 40px;
+}
+
+
+.foot-address{
+    width: 250px;
+    height: 280px;
+}
+.foot-address li{
+    list-style: none;
+    line-height: 35px;
+}
+
+
+.foot-address p{
+    padding-bottom: 20px;
+}
+
+
+.icon i{
+    /* color: #ED1C24; */
+    /* background-color: #ED1C24; */
+    width: 40px;
+    height: 40px;
+    background: #ED1C24;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    padding-top: 12px;
+}
+
+.icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.follow p{
+    padding-bottom: 22px;
+}
+
+.download{
+    padding-top: 17px;
+}
+
+.download img{
+    display: block;
+    padding-top: 12px;
+}
+
+
+.copyright{
+    background-color: #0F0F0F;
+    height: 50px;
+    color: #ffffff;
+    font-size: 14px;
+    
+}
+
+.copyright-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 50px;
 }
